# lichess-api

./: Cargo.toml
examples/: debug.rs
src/: auth.rs  error.rs  lib.rs
